--- a/MyDbtDiaryCard/MyDbtDiaryCard.Android/MyDbtDiaryCard.Android.csproj
+++ b/MyDbtDiaryCard/MyDbtDiaryCard.Android/MyDbtDiaryCard.Android.csproj
@@ -60,9 +60,6 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="OxyPlot.Xamarin.Forms">
-      <Version>1.0.0</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.2" />
   </ItemGroup>
@@ -96,6 +93,14 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\oxyplot-xamarin\Source\OxyPlot.Xamarin.Forms.Platform.Android\OxyPlot.Xamarin.Forms.Platform.Android.csproj">
+      <Project>{60d23ca9-4af6-4179-a3f5-6aebc907337e}</Project>
+      <Name>OxyPlot.Xamarin.Forms.Platform.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\oxyplot-xamarin\Source\OxyPlot.Xamarin.Forms\OxyPlot.Xamarin.Forms.csproj">
+      <Project>{d80c6e71-5a5b-4674-ac82-5a70e5921f92}</Project>
+      <Name>OxyPlot.Xamarin.Forms</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MyDbtDiaryCard\MyDbtDiaryCard.csproj">
       <Project>{6A9D23C2-AED0-4BAC-9B55-1E3E640A3CC0}</Project>
       <Name>MyDbtDiaryCard</Name>
