--- a/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
@@ -11,12 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OxyPlot.Xamarin.Forms" Version="1.0.0" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\oxyplot-xamarin\Source\OxyPlot.Xamarin.Forms\OxyPlot.Xamarin.Forms.csproj" />
   </ItemGroup>
 
   <ItemGroup>
