--- a/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
@@ -57,6 +57,9 @@
     <EmbeddedResource Update="Views\OverviewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\TableOverviewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
