--- a/MyDbtDiaryCard/MyDbtDiaryCard.Android/MyDbtDiaryCard.Android.csproj
+++ b/MyDbtDiaryCard/MyDbtDiaryCard.Android/MyDbtDiaryCard.Android.csproj
@@ -63,6 +63,9 @@
     <PackageReference Include="OxyPlot.Xamarin.Forms">
       <Version>1.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.2" />
   </ItemGroup>
