--- a/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="OxyPlot.Xamarin.Forms" Version="1.0.0" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="2.1.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
