--- a/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/MyDbtDiaryCard.csproj
@@ -58,6 +58,9 @@
     <EmbeddedResource Update="Views\OverviewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PopupPages\UsefulnessHelpPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\TableOverviewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
